examples/test/testpolicy4060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4060
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key7: value2
      key40: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value25
          key29: value12
      podSelector:
        matchLabels:
          key12: value47
